fix message alignment

--- a/public/style.css
+++ b/public/style.css
@@ -175,7 +175,7 @@ form .search-ghost {
 .music-tour-map-container h2 {
   font-size: 40px;
   font-weight: 100;
-  margin-left: 150px;
+  margin-left: 30px;
   margin-top: 20px;
 }
 
